modified the php-fpm logrotate to include all logs under directory

--- a/playbooks/roles/misc_setup/templates/log_php-fpm.j2
+++ b/playbooks/roles/misc_setup/templates/log_php-fpm.j2
@@ -1,4 +1,4 @@
-/home/{{ web_user }}/var/php-fpm/error.log {
+/home/{{ web_user }}/var/php-fpm/*.log {
         daily
         rotate 14
         missingok
